[package]
name = "kaon"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.hyper]
version = "0.14.16"
default_features = false
features = [ "client", "http1", "tcp" ]

[dependencies.serde]
version = "1.0.132"
default_features = false
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0.73"
default_features = false
features = []

[dependencies.tracing]
version = "0.1.29"
default_features = false
features = [ "std", "attributes" ]

[dependencies.tracing-futures]
version = "0.2.5"
default_features = false
features = [ "std-future", "std" ]

[dev-dependencies.mockito]
version = "0.30.0"
default_features = false
features = []

[dev-dependencies.tokio]
version = "1.15.0"
default_features = false
features = [ "rt", "macros", "test-util" ]

[dev-dependencies.tracing-subscriber]
version = "0.3.4"
default_features = false
features = [ "default" ]
